# gk-save-rate-analysis

./: .env.local.example  .gitignore  CLAUDE.md  README.md  RUNBOOK.md  pyproject.toml  run-update.sh  vercel.json
docs/plans/: 2026-07-08-gk-page-tabs-help-perf.md  2026-07-09-payload-compression-rolling-window.md  2026-07-14-player-nation-club.md  2026-07-15-perf-and-cleanup.md  2026-07-15-player-traits.md  2026-07-16-situational-and-value.md
docs/superpowers/specs/: 2026-07-10-player-images-design.md
reference/: DESIGN.md  GK 종합 평가지표 최종 명세서.md  START_HERE.md  api-2-user.yaml  api-3-match.yaml  api-4-ranker.yaml  api-5-metadata.yaml  api-6-image.yaml  nexon open api 명세.md
scripts/: backfill_fetch_log.py  build.sh  classify_new_traits.py  collect.sh  migrate_compress.py  status.sh  update.sh  verify_migration.py
src/gksave/: __init__.py  agg.py  api.py  cli.py  codec.py  collect.py  config.py  db.py  export.py  favicon.txt  http.py  meta.py  parse.py  playerinfo.py  render.py  spike.py
tests/: conftest.py  test_adaptive_rate.py  test_agg.py  test_codec.py  test_dates.py  test_db_lock.py  test_db_schema.py  test_frontier_stats.py  test_http.py  test_meta.py  test_parse.py  test_playerinfo.py  test_render.py  test_shot_types.py  test_views.py  test_window.py
tests/fixtures/: match_detail_sample.json
