[project]
name = "gksave"
version = "0.1.0"
description = "FC온라인 공식경기 데이터로 골키퍼 카드×강화단계 선방률 분석"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "duckdb>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
gksave = "gksave.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
