[project]
name = "gksave"
version = "0.1.0"
description = "FC온라인 공식경기 데이터로 골키퍼 카드×강화단계 선방률 분석"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "duckdb>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# 1회성 도구 전용(런타임/배포엔 불필요). 파비콘 가공·트레잇 아이콘 분류에 씀.
# scripts/classify_new_traits.py 가 이 그룹을 필요로 한다.
tools = [
    "Pillow>=10",
]

[project.scripts]
gksave = "gksave.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
